build: nginx.conf

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   yeba_scalium:
-    image: yebatech/vendas-master:latest
+    image: yebatech/scalium:latest
     networks:
       - apollo
     deploy:
